--- a/.github/workflows/quiet-layer-daily.yml
+++ b/.github/workflows/quiet-layer-daily.yml
@@ -24,9 +24,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install HTML parser dependency
+      - name: Install dependencies
         run: |
-          npm install jsdom
+          npm install jsdom node-fetch@2
 
       - name: Generate quiet_daily.json
         run: |
